# ensemble_sim

./: .gitignore  Projects.code-workspace  david_jax_code.py  example_ensemble_simuation.ipynb  heterogeneous_relion_dataset.star  log_likelihood_hsp90_10kimages.npy  log_likelihood_hsp90_10kimages_high_noise.npy  log_likelihood_hsp90_10kimages_med_noise.npy  log_likelihood_hsp90_10kimages_mid_noise.npy  old_simple_simulator.py  pyproject.toml  readme.md  sampler_playground.ipynb  sim_playground.ipynb  simple_simulator.py  simulating-and-reweighting-ensembles.ipynb  source_estimation_calhm2.py  source_estimation_playground.ipynb  source_estimation_playground_alt.ipynb  source_estimation_playground_calhm2.ipynb  source_estimation_playground_redo.ipynb  test_likelihood_notebook.ipynb  track_stats_and_bayesian.ipynb  true_weights.npy  trying_out_simulator.ipynb  weights_mean.txt  weights_std.txt
archive/: trying_out_simulator.ipynb
configs/: pose.yaml  simulate_stack.yaml
notebooks/: source_estimation_playground.ipynb
src/: ensemble_sim.py  ensemble_sim_new.py  log_likelihood.py  nonuniform_pose.py  utils.py
