[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/ensemble_sim",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[project]
authors = [
   { name = "Luke Evans", email = "levans@flatironinstitute.org" }
]
name = "ensemble_sim"
version = "0.0.2"
dependencies = [
    "numpy",
    "numpyro",
    "equinox",
    "jax",
    "jax_dataloader",
    "matplotlib",
    "omegaconf",
    "hydra-core",
    "scipy",
]
